# wasmer_dynamic_func_bug_demo

./: Cargo.toml  README.md
src/: main.rs  wasi_example.wasm
