[package]
name = "wasmer_demo"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", branch = "master", features = ["dynamicfunc-fat-closures"] }
wasmer-wasi = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
